fix: fix editors height on small screen

--- a/RSS-CSS-Selectors/src/components/main/main.scss
+++ b/RSS-CSS-Selectors/src/components/main/main.scss
@@ -57,6 +57,7 @@
 
   @include media-mobile-small {
     width: 70% !important;
+    min-height: 2rem;
   }
 }
 
